<resources>
    <string name="app_name">MyMapApp</string>
    <string name="api_key">"nothing here"</string>

    <string name="user_name">Name</string>
    <string name="user_id">ID</string>
    <string name="user_mail">Email</string>

    <string name="user_dtls">User Details</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="refresh">Refresh</string>
</resources>
